chore: implement queries

--- a/osmosis-cw-pool/Cargo.toml
+++ b/osmosis-cw-pool/Cargo.toml
@@ -2,7 +2,7 @@
 name = "osmosis-cw-pool"
 version = "0.1.0"
 authors = ["Kerber0x <kerber0x@protonmail.com>"]
-description = "Osmosis Pool interface implementation to hook Osmosis with White Whale"
+description = "Osmosis Pool interface implementation to hook Osmosis with White Whale pools"
 edition = "2021"
 license = "MIT"
 homepage = "https://whitewhale.money"
@@ -46,7 +46,7 @@ cw2 = "1.1.2"
 schemars = "0.8.16"
 serde = { version = "1.0.194", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.56" }
-white-whale = { git = "https://github.com/White-Whale-Defi-Platform/white-whale-core", branch = "release/v2_contracts" }
+white-whale = { git = "https://github.com/White-Whale-Defi-Platform/white-whale-core", branch = "feat/osmosis-deployment", features = ["osmosis"] }
 semver = { version = "1.0.12"}
 osmosis-std = "0.21.0"
 
