--- a/osmosis-cw-pool/Cargo.toml
+++ b/osmosis-cw-pool/Cargo.toml
@@ -44,12 +44,12 @@ cosmwasm-std = { version = "1.5.0", features = [
 cw-storage-plus = "1.2.0"
 cw2 = "1.1.2"
 schemars = "0.8.16"
-serde = { version = "1.0.194", default-features = false, features = ["derive"] }
+serde = { version = "1.0.195", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.56" }
 white-whale = { git = "https://github.com/White-Whale-Defi-Platform/white-whale-core", tag = "v1.6.3", features = ["osmosis"] }
-semver = { version = "1.0.12"}
+semver = { version = "1.0.21"}
 osmosis-std = "0.22.0"
 cw-utils = "1.0.3"
 
 [dev-dependencies]
-osmosis-test-tube = "21.0.0"
+osmosis-test-tube = { version = "22.1.0", features = ["wasm-sudo"] }
