--- a/osmosis-cw-pool/Cargo.toml
+++ b/osmosis-cw-pool/Cargo.toml
@@ -32,7 +32,7 @@ backtraces = ["cosmwasm-std/backtraces"]
 optimize = """docker run --rm -v "$(pwd)":/code \
   --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
   --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
-  cosmwasm/optimizer-arm64:0.15.0
+  cosmwasm/optimizer:0.15.0
 """
 
 [dependencies]
@@ -46,7 +46,7 @@ cw2 = "1.1.2"
 schemars = "0.8.16"
 serde = { version = "1.0.195", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.56" }
-white-whale-std = { version = "1.1.1", features = ["osmosis"] }
+white-whale-std = { version = "1.1.2", features = ["osmosis"] }
 semver = { version = "1.0.21"}
 osmosis-std = "0.22.0"
 cw-utils = "1.0.3"
