--- a/cw-migrate-error-derive/Cargo.toml
+++ b/cw-migrate-error-derive/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "migrate-error-derive"
+name = "cw-migrate-error-derive"
 version = "0.1.0"
 authors = ["Kerber0x <kerber0x@protonmail.com>"]
 edition = "2021"
